@@ -31,7 +31,7 @@
         </configuration>
       </plugin>
 
-      <!-- 2) PMD Plugin (مُحدث ليعمل مع PMD 7.x) -->
+      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
@@ -42,7 +42,7 @@
             <phase>verify</phase>
             <goals>
               <goal>pmd</goal>
-              <goal>cpd-check</goal> <!-- تحليل التكرار -->
+              <goal>cpd-check</goal> 
             </goals>
           </execution>
         </executions>
@@ -50,7 +50,7 @@
           <format>xml</format>
           <targetDirectory>${project.build.directory}</targetDirectory>
 
-          <!-- القواعد الجديدة المتوافقة مع PMD 7 -->
+          
           <rulesets>
             <ruleset>category/java/bestpractices.xml</ruleset>
             <ruleset>category/java/codestyle.xml</ruleset>
@@ -88,6 +88,17 @@
           <!-- <failBuildOnViolations>false</failBuildOnViolations> -->
         </configuration>
       </plugin>
+      
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.1.2</version>
+            <configuration>
+                <argLine>
+                    --add-opens java.base/java.lang=ALL-UNNAMED
+                </argLine>
+            </configuration>
+        </plugin>
 
     </plugins>
   </build>
@@ -98,6 +109,14 @@
     <groupId>org.mockito</groupId>
     <artifactId>mockito-core</artifactId>
     <version>5.20.0</version>
+    <scope>test</scope>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-inline</artifactId>
+    <version>5.2.0</version>
     <scope>test</scope>
 </dependency>
 
